Details Page Done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">NewsReader</string>
+    <string name="protestnews">U.S. officials warned Wednesday that China could be preparing for a Tiananmen
+        Square-style crackdown in response to Hong Kong protests, as footage captures the menacing movement of military
+        convoys near the border and Beijing ratchets up its rhetoric toward the demonstrators. House Foreign Affairs
+        Committee Chairman Eliot Engel, D-N.Y., and Ranking Member Michael McCaul, R-Texas, issued a statement Wednesday
+        urging Beijing to not repeat history with another brutal crackdown.
+        “30 years after the Chinese Communist Party’s brutal massacre of peaceful democratic protesters in Tiananmen
+        Square, we are concerned that China would consider again brutally putting down peaceful protests,” they said.
+        “We urge China to avoid making such a mistake, which would be met with universal condemnation and swift
+        consequences.”
+        The lawmakers pointedly referenced the bloody 1989 massacre, where student-led pro-democracy protests in
+        Beijings Tiananmen Square were put down by the ruling Communist Party, leaving hundreds dead.
+        Engel and McCaul added that the committee has asked Beijing to “cease encroaching on Hong Kong’s autonomy,”
+        noting that it is “Beijings actions that are at the root of the frustration among the people of Hong Kong.”
+        “No foreign powers are fomenting this dissent. It is the result of Beijings successive violations of their
+        commitment to honor the will of the people of Hong Kong,” they continued, maintaining their “deep respect” for
+        the protesters and their “clear desire for freedom, democracy, and the rule of law.
+    </string>
 </resources>
