Text looks better

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
         repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut
         reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat
     </string>
+    <string name="i_like_purple">I like Purple</string>
 </resources>
